# sipkip-audio

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
audio/: create-opus.sh  make-include.sh  opusdec.c  opusenc.c
config/: kconfig_menus.json  sdkconfig.json
main/: CMakeLists.txt  audio.h  commands.c  commands.h  muxed-gpio.c  muxed-gpio.h  sipkip-audio.c  sipkip-audio.h  spp-task.c  spp-task.h  utils.h  vfs-acceptor.c  vfs-acceptor.h  xmodem.c  xmodem.h
